2025-06 Feature Update for Version Next (5.0.x)

--- a/index.html
+++ b/index.html
@@ -90,143 +90,18 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <nav aria-label="breadcrumb">
+                        <!-- <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center wow fadeInUp" data-wow-delay="100ms">
                                 <li class="breadcrumb-item-aag">Home
                                 </li>
                                 <li class="breadcrumb-item-aag active" aria-current="page">At a glance</li>
                             </ol>
-                        </nav>
-                        <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Line Overview</h2>
+                        </nav> -->
+                        <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Lines Overview</h2>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- Delays Overview (> 10 mins) -->
-        <div class="row row-do">
-            <div class="chart col-xl-12 col-lg-12 wow fadeInUp" data-wow-delay="300ms">
-                <div class="card card-do h-100 py-2">
-                    <div class="card-header card-header-active py-3 d-flex align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-black">
-                            <span data-title="Only delays reported officially will be shown">
-                                Network Uptime (18 Feb - 18 May 2025)</span>
-                        </h6>
-                    </div>
-                    <!-- Card Body -->
-                    <div class="card-body card-body-do">
-
-                        <!-- Uptime bars included from external file -->
-                        <div w3-include-html="uptime-bars.html"></div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Recent Incidents -->
-        <div class="row row-ri">
-            <div class="slide-container swiper">
-                <div class="slide-content">
-                    <div class="card-wrapper swiper-wrapper">
-                        <!-- Card 1 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/05/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track point fault, please expect an additional 10mins train travel
-                                    time between #Yishun and #Sembawang. Free regular bus service is available between
-                                    #Yishun and #Woodlands.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 2 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="200ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track point fault, pls add additional 10mins train travel time
-                                    between #Tampines and #PasirRis. Free regular bus service is available between
-                                    #Tampines and #PasirRis.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 3 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="300ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px">
-                                    Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
-                                    #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
-                                    #Bishan.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 4 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="400ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 04/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1908029621167382639"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track fault, please expect an additional 20mins of travelling time
-                                    between #Queenstown and #BoonLay. Shuttle train are available between #Clementi and
-                                    #JurongEast and #JurongEast and #Lakeside. Free regular bus is available...
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="swiper-button-next swiper-navBtn" tabindex="0" aria-label="Next slide">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-                <button class="swiper-button-prev swiper-navBtn" tabindex="0" aria-label="Previous slide">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </button>
-                <div class="swiper-pagination"></div>
-            </div>
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">View Incident History &nbsp;<i
-                        class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
 
         <!-- Days Overview -->
         <div class="row row-lrd">
@@ -318,12 +193,12 @@
                                     <a href="mrt-lines/ccl.html">Circle Line</a>
                                 </div>
                                 <!-- Days -->
-                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-03-14"></div>
+                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-05-20"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     since last reported delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;<span id="nsl-last-delay"
-                                        data-last-delay="2025-03-14"></span>
+                                        data-last-delay="2025-05-20"></span>
                                 </div>
                             </div>
                             <div class="col-auto">
@@ -438,6 +313,128 @@
                 </div>
             </div>
         </div>
+
+        <br>
+        <br>
+
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <!-- <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-center wow fadeInUp" data-wow-delay="100ms">
+                                <li class="breadcrumb-item-aag">Home
+                                </li>
+                                <li class="breadcrumb-item-aag active" aria-current="page">At a glance</li>
+                            </ol>
+                        </nav> -->
+                        <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Recent Incidents</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recent Incidents -->
+        <div class="row row-ri">
+            <div class="slide-container swiper">
+                <div class="slide-content">
+                    <div class="card-wrapper swiper-wrapper">
+                        <!-- Card 1 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 20/05/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/CCLCap.png" alt="CCL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1924622824381325381"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a train fault, please add 30 minutes travel time between #PayaLebar and
+                                    #BuonaVista. Free regular bus services are available between #Serangoon and
+                                    #BuonaVista.
+                                </p>
+
+                            </div>
+                        </div>
+                        <!-- Card 2 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/05/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track point fault, please expect an additional 10mins train travel
+                                    time between #Yishun and #Sembawang. Free regular bus service is available between
+                                    #Yishun and #Woodlands.
+                                </p>
+
+                            </div>
+                        </div>
+                        <!-- Card 3 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="200ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/04/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track point fault, pls add additional 10mins train travel time
+                                    between #Tampines and #PasirRis. Free regular bus service is available between
+                                    #Tampines and #PasirRis.
+                                </p>
+
+                            </div>
+                        </div>
+                        <!-- Card 4 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="300ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/04/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px">
+                                    Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
+                                    #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
+                                    #Bishan.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="swiper-button-next swiper-navBtn" tabindex="0" aria-label="Next slide">
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+                <button class="swiper-button-prev swiper-navBtn" tabindex="0" aria-label="Previous slide">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </button>
+                <div class="swiper-pagination"></div>
+            </div>
+            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">View Incident History &nbsp;<i
+                        class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+
 
         <br>
         <br>
