--- a/uptime-bars.html
+++ b/uptime-bars.html
@@ -115,7 +115,28 @@
     <div class="uptime-bar up" style="flex:1 1 0"></div>
     <div class="uptime-bar up" style="flex:1 1 0"></div>
     <div class="uptime-bar up" style="flex:1 1 0"></div>
-    <!-- ...repeat for 30 bars... -->
+
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <a href="./exp1.html" class="uptime-bar down" style="flex:1 1 0" title="05/03/2025"></a>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <a href="./exp1.html" class="uptime-bar down" style="flex:1 1 0" title="12/03/2025"></a>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <a href="./exp1.html" class="uptime-bar down" style="flex:1 1 0" title="14/03/2025"></a>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
+    <div class="uptime-bar up" style="flex:1 1 0"></div>
 </div>
 
 
