2025-06 Feature Update for Version Next (5.0.x)

--- a/past-records/past-records.html
+++ b/past-records/past-records.html
@@ -113,48 +113,188 @@
             <!-- Fleet List Tabs -->
             <div class="col-12">
                 <ul class="nav nav-tabs" id="busTab" role="tablist">
-                    <li class="nav-item" role="presentation">
+                    <li class="nav-item-ic" role="presentation">
                         <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1"
                             type="button" role="tab" aria-controls="tab1" aria-selected="true">May</button>
                     </li>
-                    <li class="nav-item" role="presentation">
+                    <li class="nav-item-ic" role="presentation">
                         <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button"
                             role="tab" aria-controls="tab2" aria-selected="false">April</button>
                     </li>
+                    <li class="nav-item-ic" role="presentation">
+                        <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button"
+                            role="tab" aria-controls="tab3" aria-selected="false">March</button>
+                    </li>
 
                 </ul>
+
                 <div class="tab-content" id="busTabContent">
 
+                    <!-- May -->
                     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-
-                        <div class="card">
+                        <div class="card-in">
                             <div class="card-header">
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 20/05/2025
-                                <a href="https://x.com/SMRT_Singapore/status/1924622824381325381"
-                                    style="position: absolute; top: 15px; right: 16px;">
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
+                                    style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
                                 </a>
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title"><img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
-                                        style="padding-bottom: 1em;"></h5>
-                                <p class="card-text">[CCL]: Due to a train fault, please add 30 minutes travel time
-                                    between #PayaLebar and #BuonaVista. Free regular bus services are available between
-                                    #Serangoon and #BuonaVista.
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a train fault, please add 30 minutes travel time between #PayaLebar and
+                                    #BuonaVista. Free regular bus services are available between #Serangoon and
+                                    #BuonaVista.
                                 </p>
+
                             </div>
                         </div>
 
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/05/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/NSLCap.png" alt="NSL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
 
-                        
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track point fault, please expect an additional 10mins train travel
+                                    time between #Yishun and #Sembawang. Free regular bus service is available between
+                                    #Yishun and #Woodlands.
+                                </p>
+
+                            </div>
+                        </div>
                     </div>
 
+                    <!-- Apr -->
                     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-  
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/04/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/EWLCap.png" alt="NSL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track point fault, pls add additional 10mins train travel time
+                                    between #Tampines and #PasirRis. Free regular bus service is available between
+                                    #Tampines and #PasirRis.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/04/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/NSLCap.png" alt="NSL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px">
+                                    Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
+                                    #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
+                                    #Bishan.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Mar -->
+                    <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 14/03/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1900502980346143157"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Additional 15 mins train travel time between #HarbourFront,
+                                    #MarinaBay and #DhobyGhaut
+                                    due to a signal system fault.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 12/03/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/TELCap.png" alt="NSL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1899576519300899093"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px">
+                                    Due to a train fault, there will be no train service between
+                                    Gardens By The Bay to
+                                    Bayshore. Train service is available between Woodlands North to Gardens
+                                    By The Bay. Free Regular
+                                    Bus available between Gardens By The Bay to Bayshore.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 05/03/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="NSL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1897197246871167416"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px">
+                                    Please add 30 mins train travel time between #Promenade and
+                                    #Serangoon, in both
+                                    directions due to train fault. Free regular bus service is available
+                                    between #Promenade and
+                                    #Serangoon. Train service is still available.
+                                </p>
+
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
+
             </div>
+        </div>
         </div>
 
 
