2025-06 Feature Update for Version Next (5.0.x)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <nav class="navbar navbar-mobile">
             <a href="#" class="nav-item active">Home</a>
             <a href="statistics/statistics.html" class="nav-item">Statistics</a>
-            <a href="past-records/past-records.html" class="nav-item">Past Records</a>
+            <a href="past-records/past-records.html" class="nav-item">Incident History</a>
             <a href="our-networks.html" class="nav-item">Networks</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
