--- a/past-records/past-records copy.html
+++ b/past-records/past-records copy.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Past Records | TDC</title>
+    <title>Incident History | TDC</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/aNQTQtO.png" />
@@ -46,7 +46,7 @@
         <nav class="navbar navbar-mobile">
             <a href="../index.html" class="nav-item active">Home</a>
             <a href="../statistics/statistics.html" class="nav-item">Statistics</a>
-            <a href="../past-records/past-records.html" class="nav-item">Past Records</a>
+            <a href="../past-records/past-records.html" class="nav-item">Incident History</a>
             <a href="../our-networks.html" class="nav-item">Networks</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
@@ -74,12 +74,12 @@
                                         </li>
                                         <li class="breadcrumb-item active"><a
                                                 href="https://nurafianzulkifli.com/works-by-nrfz.html">
-                                                Past Records
+                                                Incident History
                                             </a>
                                         </li>
                                     </ol>
                                 </nav>
-                                <h1 class="brc">Past Records</h1>
+                                <h1 class="brc">Incident History</h1>
                             </div>
                         </div>
                     </div>
