--- a/mrt-lines/ewl.html
+++ b/mrt-lines/ewl.html
@@ -52,7 +52,7 @@
               <div class="classynav">
                 <ul id="nav">
                   <li><a href="../statistics/statistics.html">Statistics</a></li>
-                  <li><a href="../past-records/past-records.html">Past Records</a></li>
+                  <li><a href="../past-records/past-records.html">Incident History</a></li>
                   <li class="active"><a href="../our-networks.html">Networks</a></li>
                   <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!"><i
                         class="fa-solid fa-moon"></i></button>
