--- a/past-records/2023_past-records.html
+++ b/past-records/2023_past-records.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Past Records | TDC</title>
+    <title>Incident History | TDC</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/aNQTQtO.png" />
@@ -55,7 +55,7 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="../statistics/statistics.html">Statistics</a></li>
-                                    <li class="active"><a href="past-records.html">Past Records</a></li>
+                                    <li class="active"><a href="past-records.html">Incident History</a></li>
                                     <li><a href="../our-networks.html">Networks</a></li>
                                     <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
                                         title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
@@ -81,10 +81,10 @@
                             <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item"><a href="../index.html">Home</a>
                                 </li>
-                                <li class="breadcrumb-item active" aria-current="page">Past Records</li>
+                                <li class="breadcrumb-item active" aria-current="page">Incident History</li>
                             </ol>
                         </nav>
-                        <h2 class="page-title">Past Records</h2>
+                        <h2 class="page-title">Incident History</h2>
                     </div>
                 </div>
             </div>
