--- a/past-records/past-records.html
+++ b/past-records/past-records.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Past Records | TDC</title>
+    <title>Incident History | TDC</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta property="og:image" content="https://i.imgur.com/aNQTQtO.png" />
@@ -44,9 +44,9 @@
         </label>
 
         <nav class="navbar navbar-mobile">
-            <a href="../index.html" class="nav-item active">Home</a>
+            <a href="../index.html" class="nav-item">Home</a>
             <a href="../statistics/statistics.html" class="nav-item">Statistics</a>
-            <a href="../past-records/past-records.html" class="nav-item">Past Records</a>
+            <a href="../past-records/past-records.html" class="nav-item active">Incident History</a>
             <a href="../our-networks.html" class="nav-item">Networks</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
