--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -44,7 +44,7 @@
         <nav class="navbar navbar-mobile">
             <a href="../index.html" class="nav-item">Home</a>
             <a href="../statistics/statistics.html" class="nav-item active">Statistics</a>
-            <a href="../past-records/past-records.html" class="nav-item">Past Records</a>
+            <a href="../past-records/past-records.html" class="nav-item">Incident History</a>
             <a href="../our-networks.html" class="nav-item">Networks</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
