2025-06 Feature Update for Version Next (5.0.x)

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                 <img src="img/caplets/CCLCap.png" alt="CCL" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1924622824381325381"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;" title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
@@ -368,7 +368,7 @@
                                 <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;" title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
@@ -388,7 +388,7 @@
                                 <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;" title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
@@ -408,7 +408,7 @@
                                 <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;" title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px">
