--- a/past-records/past-records.html
+++ b/past-records/past-records.html
@@ -126,6 +126,16 @@
                             role="tab" aria-controls="tab3" aria-selected="false">March</button>
                     </li>
 
+                    <li class="nav-item-ic" role="presentation">
+                        <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button"
+                            role="tab" aria-controls="tab4" aria-selected="false">February</button>
+                    </li>
+
+                    <li class="nav-item-ic" role="presentation">
+                        <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button"
+                            role="tab" aria-controls="tab5" aria-selected="false">January</button>
+                    </li>
+
                 </ul>
 
                 <div class="tab-content" id="busTabContent">
@@ -141,7 +151,8 @@
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
@@ -162,7 +173,8 @@
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
@@ -186,7 +198,8 @@
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
@@ -207,7 +220,8 @@
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px">
@@ -231,7 +245,8 @@
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1900502980346143157"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
@@ -252,7 +267,8 @@
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1899576519300899093"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px">
@@ -275,7 +291,8 @@
                                     style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1897197246871167416"
                                     style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px">
@@ -284,6 +301,108 @@
                                     directions due to train fault. Free regular bus service is available
                                     between #Promenade and
                                     #Serangoon. Train service is still available.
+                                </p>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Feb -->
+                    <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/02/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/CCLCap.png" alt="CCL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://www.facebook.com/SMRTCorpSG/posts/pfbid0W5iPaUKFHNy6ghSk24n96L7XZP3xCJ3h8BEVqs8uNE1xPYrD7eWLYxVgeuZ97ySjl"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-facebook" style="font-size: 25px;" title="via Facebook"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Update on the Circle Line (CCL) at 10.20am:
+                                    On 11 February, at around 8.11 am, a signalling system fault occurred
+                                    between Paya Lebar and
+                                    Marymount stations, affecting train operations across eight stations...
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 07/02/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/TELCap.png" alt="NSL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1887639217314144384"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px">
+                                    Due to engineering vehicle fault, please add 10 minutes
+                                    travelling time from #AngMoKio to
+                                    #JurongEast. Free regular bus services and bridging bus services are
+                                    available between #Bishan
+                                    and #Woodlands. We apologise for this delay to your journey.
+                                </p>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- Jan -->
+                    <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 10/01/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/NSLCap.png" alt="NSL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1877655134899184057"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a train fault, pls add 15mins train travel time btwn
+                                    #MarinaSouthPier and #Bishan.
+                                    Free regular bus svcs btwn #MarinaSouthPier and #ToaPayoh. Passengers
+                                    are advised to use
+                                    alternative route to continue their journey. Our station staff will
+                                    assist.
+                                </p>
+
+                            </div>
+                        </div>
+
+                        <div class="card-in">
+                            <div class="card-header">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 02/01/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="../img/caplets/TELCap.png" alt="TEL" width="55px"
+                                    style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1874782432857383077"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                        title="via X (Twitter)"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px">
+                                    Please allow for additional 10 mins travelling time from
+                                    Caldecott to
+                                    Gardens by the Bay
+                                    due to a train fault.
                                 </p>
 
                             </div>
