--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -54,21 +54,30 @@
         </nav>
     </header>
 
-
     <!-- ============================================= Hero Section ============================================= -->
-    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(../img/bg-img/hero.png);">
-        <div class="container h-100" style="margin-top: 2em;">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content breadcrumb-content-subp text-center">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="../index.html">Home</a>
-                                </li>
-                                <li class="breadcrumb-item active">Statistics</li>
-                            </ol>
-                        </nav>
-                        <h2 class="page-title">Mean Distance Travelled Between Delays</h2>
+    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
+        style="background-image: url(../img/bg-img/hero.png); height: 100vh;">
+        <div class="wbnrfz_details_blog">
+            <div class="container">
+                <div class="portfolio-controls d-flex justify-content-between align-items-center">
+                    <!-- Filter Buttons -->
+                    <div class="portfolio-filter mt-3">
+                        <div class="col-lg-12">
+                            <div class="main-title">
+                                <nav aria-label="breadcrumb">
+                                    <ol class="breadcrumb">
+                                        <li class="breadcrumb-item"><a href="../index.html">
+                                                Home</a>
+                                        </li>
+                                        <li class="breadcrumb-item active"><a href="#">
+                                                Statistics
+                                            </a>
+                                        </li>
+                                    </ol>
+                                </nav>
+                                <h1 class="brc">Mean Distance Travelled Between Delays</h1>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -101,7 +110,7 @@
                     <h2 class="accordion-header " id="headingSMRT">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseSMRT" aria-expanded="false" aria-controls="collapseSMRT">
-                            <h2><img src="../img/core-img/stl.png"  id="ops-smrt" alt="SMRTT" width="150px"></h2>
+                            <h2><img src="../img/core-img/stl.png" id="ops-smrt" alt="SMRTT" width="150px"></h2>
                         </button>
                     </h2>
                     <div id="collapseSMRT" class="accordion-collapse collapse" aria-labelledby="headingSMRT"
@@ -152,7 +161,7 @@
                     <h2 class="accordion-header " id="headingSBST">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseSBST" aria-expanded="false" aria-controls="collapseSBST">
-                            <h2><img src="../img/core-img/sbstl.png"  id="ops-sbst" alt="sbstl" width="150px"></h2>
+                            <h2><img src="../img/core-img/sbstl.png" id="ops-sbst" alt="sbstl" width="150px"></h2>
                         </button>
                     </h2>
                     <div id="collapseSBST" class="accordion-collapse collapse" aria-labelledby="headingSBST"
