2025-06 Feature Update for Version Next (5.0.x)

--- a/incident-history/incident-history.html
+++ b/incident-history/incident-history.html
@@ -46,7 +46,7 @@
         <nav class="navbar navbar-mobile">
             <a href="../index.html" class="nav-item">Home</a>
             <a href="../statistics/statistics.html" class="nav-item">Statistics</a>
-            <a href="../past-records/past-records.html" class="nav-item active">Incident History</a>
+            <a href="../incident-history/incident-history.html" class="nav-item active">Incident History</a>
             <a href="../our-networks.html" class="nav-item">Networks</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
@@ -98,8 +98,8 @@
                 <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
                         <a href="#" class="btn">2025</a>
-                        <a href="2024_past-records.html" class="btn">2024</a>
-                        <a href="2023_past-records.html" class="btn">2023</a>
+                        <a href="2024_incident-history.html" class="btn">2024</a>
+                        <a href="2023_incident-history.html" class="btn">2023</a>
                     </div>
                 </div>
             </div>
