--- a/incident-history/2024_incident-history.html
+++ b/incident-history/2024_incident-history.html
@@ -55,7 +55,7 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="../statistics/statistics.html">Statistics</a></li>
-                                    <li class="active"><a href="past-records.html">Incident History</a></li>
+                                    <li class="active"><a href="incident-history.html">Incident History</a></li>
                                     <li><a href="../our-networks.html">Networks</a></li>
                                     <li><button class="wbnrfz_btn_theme" id="dark-mode-toggle"
                                             title="Toggle Dark/Light Mode!"><i class="fa-solid fa-moon"></i></button>
@@ -99,9 +99,9 @@
         <div class="row row-do">
 
             <div class="pagination" style="margin-bottom:2em;">
-                <a href="past-records.html">2025</a>
+                <a href="incident-history.html">2025</a>
                 <a href="#" class="active">2024</a>
-                <a href="2023_past-records.html">2023</a>
+                <a href="2023_incident-history.html">2023</a>
             </div>
 
             <div class="col-12 wow fadeInUp" data-wow-delay="100ms" style="margin-bottom:2em;">
