--- a/incident-history/fault-overview.html
+++ b/incident-history/fault-overview.html
@@ -50,7 +50,7 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="../statistics/statistics.html">Statistics</a></li>
-                                    <li class="active"><a href="past-records.html">Incident History</a></li>
+                                    <li class="active"><a href="incident-history.html">Incident History</a></li>
                                     <li><a href="../our-networks.html">Networks</a></li>
                                 </ul>
                             </div>
